--- a/html/equipo.html
+++ b/html/equipo.html
@@ -56,6 +56,10 @@
     <div class="logo-container">
         <img src="../img/LogoTransparente.png" alt="Logo IRUPE" class="logo-image">
     </div>
+        </div>
+        <!-- Texto indicativo de la sección -->
+        <div class="section-label">Equipo</div>
+    
 </section>
 
 <section class="direccion">
