--- a/html/teatro.html
+++ b/html/teatro.html
@@ -26,37 +26,38 @@
 
     </header>
     <main>
-    <section class="principal">
-    <div class="video-container">
-        <!-- este es el video de vigilia solo -->
-     <div style="padding:41.89% 0 0 0;position:relative;">
-    <iframe src="https://player.vimeo.com/video/200684940?badge=0&amp;autopause=0&amp;autoplay=1&amp;muted=1&amp;player_id=0&amp;app_id=58479" 
-        frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
-        style="position:absolute;top:0;left:0;width:100%;height:100%;" title="VIGILIA trailer"></iframe>
-</div> 
-
-
-<!-- probando el loop de video -->
-<!-- <div style="padding:41.89% 0 0 0;position:relative;">
-    <iframe id="video1" src="https://player.vimeo.com/video/200684940?badge=0&amp;autopause=0&amp;autoplay=1&amp;muted=1&amp;loop=0&amp;player_id=0&amp;app_id=58479" 
-        frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
-        style="position:absolute;top:0;left:0;width:100%;height:100%;" title="VIGILIA trailer"></iframe>
-</div>
-
-<div style="padding:41.89% 0 0 0;position:relative; margin-top: 20px;">
-    <iframe id="video2" src="https://player.vimeo.com/video/995070467?h=cc822121d5&badge=0&amp;autopause=0&amp;autoplay=0&amp;muted=1&amp;loop=0&amp;player_id=1&amp;app_id=58479" 
-        frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
-        style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Segundo Video"></iframe>
-</div> -->
-
-
-
-    </div>
-    <!-- Reemplaza el texto por una imagen -->
-    <div class="logo-container">
-        <img src="../img/LogoTransparente.png" alt="Logo IRUPE" class="logo-image">
-    </div>
-</section>
+        <section class="principal">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="../img/teatro/irupeCarousel.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../img/teatro/padreCarrousel.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../img/teatro/gicondaCarrousel.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+           
+            <!-- Reemplaza el texto por una imagen -->
+            <div class="logo-container">
+                <img src="../img/LogoTransparente.png" alt="Logo IRUPE" class="logo-image">
+            </div>
+                </div>
+                        <!-- Texto indicativo de la sección -->
+                <div class="section-label">Teatro</div>
+        </section>
+        
 
 
 <section class="direccion">
