trabajamos en los individuales

--- a/html/vigilia.html
+++ b/html/vigilia.html
@@ -59,10 +59,22 @@
     <div class="imagenPrincipal">
         <img src="../img/individuales/vigilia/principal.jpg" alt="">
     </div>
-    <div class="titulo">
-        <h1>VIGILIA</h1>
+    <div class="imagenSecundaria">
+        <img src="../img/individuales/vigilia/secundaria.jpg" alt="">
+
     </div>
+    
 </section>
+
+<h1 class="titulo-principal">VIGILIA</h1>
+<div class="contenedor-texto">
+    <p class="texto-titulo">
+        Países: <strong>ARGENTINA-URUGUAY</strong><br>
+        Género: <strong>Drama rural</strong><br>
+        Duración: <strong>108 min</strong><br>
+        Color/B&N: <strong>Color</strong>
+    </p>
+</div>
 
         
     </main>
