--- a/html/trainJam.html
+++ b/html/trainJam.html
@@ -121,6 +121,7 @@
                 PABLO RIOS<br>
                 FELIX ARROYO
             </P>
+            <h2 class="subtitulo2">EQUIPO</h2>
         </div>
         
 
