terminamos Train JAm

--- a/html/series.html
+++ b/html/series.html
@@ -63,7 +63,7 @@
                     <!-- Card 1 -->
                     <div class="col-md-4 mb-4">
                         <div class="card">
-                            <a href="../index.php" class="card-link">
+                            <a href="../html/trainJam.html" class="card-link">
                                 <img src="../img/series/trainjam.jpg" class="card-img-top" alt="Película 1">
                                 <div class="card-info">
                                     <h5 class="card-title">TRAIN JAM</h5>
@@ -75,7 +75,7 @@
                     <!-- Card 2 -->
                     <div class="col-md-4 mb-4">
                         <div class="card">
-                            <a href="../index.php" class="card-link">
+                            <a href="../html/laVenadita.html" class="card-link">
                                 <img src="../img/series/lavenadita.jpg" class="card-img-top" alt="Película 2">
                                 <div class="card-info">
                                     <h5 class="card-title">LA VENADITA</h5>
