--- a/html/series.html
+++ b/html/series.html
@@ -87,7 +87,7 @@
                     <!-- Card 3 -->
                     <div class="col-md-4 mb-4">
                         <div class="card">
-                            <a href="../index.php" class="card-link">
+                            <a href="../html/circulo.html" class="card-link">
                                 <img src="../img/series/elcirculo.jpg" class="card-img-top" alt="Película 1">
                                 <div class="card-info">
                                     <h5 class="card-title">EL CIRCULO</h5>
