trabajando en el footer

--- a/html/series.html
+++ b/html/series.html
@@ -64,7 +64,7 @@
                     <div class="col-md-4 mb-4">
                         <div class="card">
                             <a href="../html/trainJam.html" class="card-link">
-                                <img src="../img/series/trainjam.jpg" class="card-img-top" alt="Película 1">
+                                <img src="../img/series/TRAIN JAM poster.jpg" class="card-img-top" alt="Película 1">
                                 <div class="card-info">
                                     <h5 class="card-title">TRAIN JAM</h5>
                                     
