--- a/html/templateIndiv.htm
+++ b/html/templateIndiv.htm
@@ -276,8 +276,14 @@
                     
     </main>
 
-    <footer class="bg-dark text-white text-center py-3">
-        <h5>Acá van los enlaces de las redes sociales</h5>
+    <footer class="flex-container-footer">
+        <div class="caja1-footer">
+            <img src="../img/logos/LOGO 1.png" alt="">
+        </div>
+        <div class="caja2-footer">
+
+        </div>
+        
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" 
