--- a/html/trainJam.html
+++ b/html/trainJam.html
@@ -56,6 +56,7 @@
     <a href="../html/films.html"><h2>FILMS</h2></a>
     <a href="../html/series.html" class="active"><h2>SERIES</h2></a>
     <a href="../html/teatro.html"><h2>TEATRO</h2></a>
+    <a href="../html/teatro.html"><h2>TALLERES</h2></a>
     <a href="../html/equipo.html"><h2>EQUIPO</h2></a>
     <a href="../html/contacto.html"><h2>CONTACTO</h2></a>
 </section>
@@ -280,8 +281,25 @@
                     
     </main>
 
-    <footer class="bg-dark text-white text-center py-3">
-        <h5>Acá van los enlaces de las redes sociales</h5>
+    <footer class="flex-container-footer">
+        <div class="caja3-footer">
+            <section class="direccion">
+                <a href="../html/films.html"><h2>FILMS</h2></a>
+                <a href="../html/series.html" class="active"><h2>SERIES</h2></a>
+                <a href="../html/teatro.html"><h2>TEATRO</h2></a>
+                <a href="../html/teatro.html"><h2>TALLERES</h2></a>
+                <a href="../html/equipo.html"><h2>EQUIPO</h2></a>
+                <a href="../html/contacto.html"><h2>CONTACTO</h2></a>
+            </section>
+
+        </div>
+        <div class="caja1-footer">
+            <img src="../img/logos/LOGO 1.png" alt="">
+        </div>
+        <div class="caja2-footer">
+            <p>COPYRIGHT GRUPO IRUPÉ - 2024 - TODOS LOS DERECHOS RESERVADOS</p>
+        </div>
+        
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" 
