hice varios cosas

--- a/html/circulo.html
+++ b/html/circulo.html
@@ -13,19 +13,7 @@
     <title>Películas IRUPE</title>
 </head>
 <body>
-    <header>
-        <!-- seccion NavBar -->
-        <section class="BarraNavegacion">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand mx-auto" href="../index.php">
-                <img src="../img/LogoTransparente.png" alt="Logo IRUPE" class="navbar-logo">
-            </a>
-        </div>
-    </nav>
-</section>
-
-    </header>
+   
     <main>
     <section class="principal">
         <div class="video-container">
@@ -44,12 +32,16 @@
               </div>
     <!-- Reemplaza el texto por una imagen -->
     <div class="logo-container">
-        <img src="../img/LogoTransparente.png" alt="Logo IRUPE" class="logo-image">
+        <a href="../index.php">
+            <img src="../img/logos/LOGO 1.png" alt="Logo IRUPE" class="logo-image">
+        </a>
     </div>
     </div>
     <!-- Texto indicativo de la sección -->
     <div class="section-label">
-        EL CÍRCULO
+        <h1>EL CIRCÚLO</h1>
+        <h2>Series</h2>
+
     </div>
 </section>
 
