--- a/html/primitiva.html
+++ b/html/primitiva.html
@@ -13,19 +13,7 @@
     <title>Películas IRUPE</title>
 </head>
 <body>
-    <header>
-        <!-- seccion NavBar -->
-        <section class="BarraNavegacion">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand mx-auto" href="../index.php">
-                <img src="../img/LogoTransparente.png" alt="Logo IRUPE" class="navbar-logo">
-            </a>
-        </div>
-    </nav>
-</section>
-
-    </header>
+    
     <main>
     <section class="principal">
         <div class="video-container">
@@ -40,11 +28,18 @@
         </div>
     <!-- Reemplaza el texto por una imagen -->
     <div class="logo-container">
-        <img src="../img/logos/LOGO 1.png" alt="Logo IRUPE" class="logo-image">
+        <a href="../index.php">
+            <img src="../img/logos/LOGO 1.png" alt="Logo IRUPE" class="logo-image">
+        </a>
     </div>
     </div>
     <!-- Texto indicativo de la sección -->
-    <div class="section-label">PRIMITIVA</div>
+    <div class="section-label">
+        <h1>PRIMITIVA,</h1>
+        <h3>EL AÑO DE LA SEQUIA</h3>
+        <h2>Films</h2>
+
+    </div>
 </section>
 
 
@@ -165,6 +160,30 @@
  
 </section>
 
+<section class="flex-container-trailer">
+    <div ></div>
+
+</section>
+
+<section class="flex-container-trailer">
+
+    <div class="caja1-trailer">
+        <div style="padding:56.25% 0 0 0;position:relative;">
+            <iframe src="https://player.vimeo.com/video/1003213145?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
+                style="position:absolute;top:0;left:0;width:100%;height:100%;" title="PRIMITIVA_TRAILER">
+            </iframe>
+        </div>
+
+    </div>
+    <div class="caja2-trailer">
+        <img src="../img/individuales/primitiva/trailer.jpg" alt="">
+
+    </div>
+
+
+
+</section>
   
                     
     </main>
@@ -195,3 +214,7 @@
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+
+
