--- a/html/equipo.html
+++ b/html/equipo.html
@@ -12,19 +12,7 @@
     <title>Películas IRUPE</title>
 </head>
 <body>
-    <header>
-        <!-- seccion NavBar -->
-        <section class="BarraNavegacion">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand mx-auto" href="../index.php">
-                <img src="../img/LogoTransparente.png" alt="Logo IRUPE" class="navbar-logo">
-            </a>
-        </div>
-    </nav>
-</section>
-
-    </header>
+   
     <main>
     <section class="principal">
     <div class="video-container">
@@ -51,14 +39,18 @@
 
 
 
-    </div>
-    <!-- Reemplaza el texto por una imagen -->
-    <div class="logo-container">
-        <img src="../img/LogoTransparente.png" alt="Logo IRUPE" class="logo-image">
-    </div>
-        </div>
-        <!-- Texto indicativo de la sección -->
-        <div class="section-label">Equipo</div>
+<div class="logo-container">
+    <a href="../index.php">
+        <img src="../img/logos/LOGO 1.png" alt="Logo IRUPE" class="logo-image">
+    </a>
+</div>
+</div>
+<!-- Texto indicativo de la sección -->
+<div class="section-label">
+    <!-- <h1>TITULO</h1> -->
+    <h2>Equipo</h2>
+
+</div>
     
 </section>
 
