--- a/html/series.html
+++ b/html/series.html
@@ -12,19 +12,7 @@
     <title>Películas IRUPE</title>
 </head>
 <body>
-    <header>
-        <!-- seccion NavBar -->
-        <section class="BarraNavegacion">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand mx-auto" href="../index.php">
-                <img src="../img/LogoTransparente.png" alt="Logo IRUPE" class="navbar-logo">
-            </a>
-        </div>
-    </nav>
-</section>
-
-    </header>
+   
     <main>
     <section class="principal">
         <div class="video-container">
@@ -39,11 +27,17 @@
         </div>
     <!-- Reemplaza el texto por una imagen -->
     <div class="logo-container">
-        <img src="../img/LogoTransparente.png" alt="Logo IRUPE" class="logo-image">
+        <a href="../index.php">
+            <img src="../img/logos/LOGO 1.png" alt="Logo IRUPE" class="logo-image">
+        </a>
     </div>
     </div>
     <!-- Texto indicativo de la sección -->
-    <div class="section-label">Series</div>
+    <div class="section-label">
+        <!-- <h1></h1> -->
+        <h2>Series</h2>
+
+    </div>
 </section>
 
 
@@ -65,7 +59,7 @@
                     <div class="col-md-4 mb-4">
                         <div class="card">
                             <a href="../html/trainJam.html" class="card-link">
-                                <img src="../img/series/TRAIN JAM poster.jpg" class="card-img-top" alt="Película 1">
+                                <img src="../img/series/TRAIN JAM poster CARTEL.jpg" class="card-img-top" alt="Película 1">
                                 <div class="card-info">
                                     <h5 class="card-title">TRAIN JAM</h5>
                                     
@@ -77,7 +71,7 @@
                     <div class="col-md-4 mb-4">
                         <div class="card">
                             <a href="../html/laVenadita.html" class="card-link">
-                                <img src="../img/series/LA VENADITA poster.jpg" class="card-img-top" alt="Película 2">
+                                <img src="../img/series/LA VENADITA poster CARTEL.jpg" class="card-img-top" alt="Película 2">
                                 <div class="card-info">
                                     <h5 class="card-title">LA VENADITA</h5>
                                     
