--- a/html/vigilia.html
+++ b/html/vigilia.html
@@ -13,19 +13,7 @@
     <title>Películas IRUPE</title>
 </head>
 <body>
-    <header>
-        <!-- seccion NavBar -->
-        <section class="BarraNavegacion">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand mx-auto" href="../index.php">
-                <img src="../img/LogoTransparente.png" alt="Logo IRUPE" class="navbar-logo">
-            </a>
-        </div>
-    </nav>
-</section>
-
-    </header>
+    
     <main>
     <section class="principal">
         <div class="video-container">
@@ -39,11 +27,17 @@
         </div>
     <!-- Reemplaza el texto por una imagen -->
     <div class="logo-container">
-        <img src="../img/logos/LOGO 1.png" alt="Logo IRUPE" class="logo-image">
+        <a href="../index.php">
+            <img src="../img/logos/LOGO 1.png" alt="Logo IRUPE" class="logo-image">
+        </a>
     </div>
     </div>
     <!-- Texto indicativo de la sección -->
-    <div class="section-label">VIGILIA</div>
+    <div class="section-label">
+        <h1>VIGILIA</h1>
+        <h2>Films</h2>
+
+    </div>
 </section>
 
 
@@ -169,6 +163,26 @@
  
 </section>
 
+<section class="flex-container-trailer">
+
+    <div class="caja1-trailer">
+        <div style="padding:40.5% 0 0 0;position:relative;">
+            <iframe src="https://player.vimeo.com/video/200684940?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
+            frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
+            style="position:absolute;top:0;left:0;width:100%;height:100%;" title="VIGILIA trailer">
+
+        </iframe>
+    </div>
+
+    </div>
+    <div class="caja2-trailer">
+        <img src="../img/individuales/vigilia/trailer.jpg" alt="">
+
+    </div>
+
+
+
+</section>
   
                     
     </main>
