hice caja trailer vacio

--- a/html/films.html
+++ b/html/films.html
@@ -92,7 +92,7 @@
                     <!-- Card 4 -->
                     <div class="col-md-4 mb-4">
                         <div class="card">
-                            <a href="../index.php" class="card-link">
+                            <a href="../html/laNiniaDeLaCosecha.html" class="card-link">
                                 <img src="../img/films/LA NIÑA DE LA COSECHA poster CARTEL.jpg" class="card-img-top" alt="Película 1">
                                 <div class="card-info">
                                     <h5 class="card-title">LA NIÑA DE LA COSECHA</h5>
