terminamos films. emepsamos teatro

--- a/html/films.html
+++ b/html/films.html
@@ -104,7 +104,7 @@
                     <!-- Card 5 -->
                     <div class="col-md-4 mb-4">
                         <div class="card">
-                            <a href="../index.php" class="card-link">
+                            <a href="../html/laElegida.html" class="card-link">
                                 <img src="../img/films/LA ELEGIDA poster CARTEL.jpg" class="card-img-top" alt="Película 1">
                                 <div class="card-info">
                                     <h5 class="card-title">LA ELEGIDA</h5>
@@ -116,7 +116,7 @@
                     <!-- Card 6 -->
                     <div class="col-md-4 mb-4">
                         <div class="card">
-                            <a href="../index.php" class="card-link">
+                            <a href="../html/laDamaDeBlanco.html" class="card-link">
                                 <img src="../img/films/LA DAMA DE BLANCO poster CARTEL_1.jpg" class="card-img-top" alt="Película 3">
                                 <div class="card-info">
                                     <h5 class="card-title">LA DAMA DE BLANCO</h5>
@@ -128,7 +128,7 @@
                     <!-- Card 7 -->
                     <div class="col-md-4 mb-4">
                         <div class="card">
-                            <a href="../index.php" class="card-link">
+                            <a href="../html/unPlanPerfecto.html" class="card-link">
                                 <img src="../img/films/UN PLAN PERFECTO poster CARTEL.jpg" class="card-img-top" alt="Película 1">
                                 <div class="card-info">
                                     <h5 class="card-title">UN PLAN PERFECTO</h5>
