--- a/html/primitiva.html
+++ b/html/primitiva.html
@@ -24,6 +24,7 @@
                 style="position:absolute;top:0;left:0;width:100%;height:100%;" title="PRIMITIVA_TRAILER">
 
                 </iframe>
+            </div>
 
         </div>
     <!-- Reemplaza el texto por una imagen -->
