--- a/html/primitiva.html
+++ b/html/primitiva.html
@@ -50,7 +50,7 @@
     <a href="../html/teatro.html"><h2>TEATRO</h2></a>
     <a href="../html/talleres.html"><h2>TALLERES</h2></a>
     <a href="../html/equipo.html"><h2>EQUIPO</h2></a>
-    <a href="../html/contacto.html"><h2>CONTACTO</h2></a>
+    <a href="../contacto.html"><h2>CONTACTO</h2></a>
 </section>
 
 
@@ -188,16 +188,17 @@
   
                     
     </main>
+    <section class="direccion">
+        <a href="../html/films.html" class="active"><h2>FILMS</h2></a>
+        <a href="../html/series.html"><h2>SERIES</h2></a>
+        <a href="../html/teatro.html"><h2>TEATRO</h2></a>
+        <a href="../html/talleres.html"><h2>TALLERES</h2></a>
+        <a href="../html/equipo.html"><h2>EQUIPO</h2></a>
+        <a href="../contacto.html"><h2>CONTACTO</h2></a>
+    </section>
 
     <footer class="flex-container-footer">
-        <section class="direccion">
-            <a href="../html/films.html" class="active"><h2>FILMS</h2></a>
-            <a href="../html/series.html"><h2>SERIES</h2></a>
-            <a href="../html/teatro.html"><h2>TEATRO</h2></a>
-            <a href="../html/talleres.html"><h2>TALLERES</h2></a>
-            <a href="../html/equipo.html"><h2>EQUIPO</h2></a>
-            <a href="../html/contacto.html"><h2>CONTACTO</h2></a>
-        </section>
+      
 
         </div>
         <div class="caja1-footer">
