--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/stylesindividuales.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <title>Películas IRUPE</title>
+    <title>Grupo Irupé</title>
+    <link rel="icon" href="img/logos/LOGO 1.png" type="image/png">
 </head>
 <body>
    
