--- a/html/films.html
+++ b/html/films.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Películas IRUPE</title>
+    <title>Grupo Irupé</title>
+    <link rel="icon" href="../img/logos/LOGO 1.png" type="image/png">
 </head>
 <body>
    
