--- a/html/unPlanPerfecto.html
+++ b/html/unPlanPerfecto.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/stylesindividuales.css">
-    <title>Películas IRUPE</title>
+    <title>Grupo Irupé</title>
+    <link rel="icon" href="../img/logos/LOGO 1.png" type="image/png">
 </head>
 <body>
     
