--- a/html/equipo.html
+++ b/html/equipo.html
@@ -108,6 +108,26 @@
 
 
                     </div>
+                    <div class="caja-equipo">
+                        <div class="subcaja1-equipo">
+                            <img src="../img/equipo/santiago.jpg" alt="">
+                        </div>
+                        <div class="subcaja2-equipo">
+                            <h1 class="titulo">
+                                PAULA OTERO
+        
+                            </h1>
+                            <p class="texto">
+                              Es productora audiovisual con más de 18 años de experiencia en desarrollo de proyectos y producción administrativa. 
+                              Egresada de la FADU-UBA como Diseñadora de Imagen y Sonido, ha trabajado en productoras como Pol-ka, Disney Argentina y Aleph Media,
+                               además de producciones independientes. Ha ganado fondos de instituciones como Bertha Foundation y Open Society Foundation. Es socia
+                                fundadora de MUA (Mujeres Audiovisuales) y capacitadora en producción con perspectiva de género. Actualmente, dirige la producción 
+                                del Festival Internacional de Cine de la Provincia de Buenos Aires (FICPBA).
+                            </p>
+                        </div>
+
+
+                    </div>
 
             </section>
 
