--- a/html/laDamaDeBlanco.html
+++ b/html/laDamaDeBlanco.html
@@ -60,13 +60,13 @@
              
                 <div class="sub caja21">
                     <h1 class="titulo">
-                        LA MUJER DE ESPALDAS
+                        LA DAMA DE BLANCO
 
                     </h1>
                     <p class="texto">
                         Países: <strong>ARGENTINA</strong><br>
-                        Género: <strong>Drama rural</strong><br>
-                        Duración: <strong>86 min</strong><br>
+                        Género: <strong>Thriller psicológico</strong><br>
+                        Duración: <strong>90 min</strong><br>
                         Color/B&N: <strong>COLOR</strong>
                     </p>
 
