--- a/html/laGiocondaMecanica.html
+++ b/html/laGiocondaMecanica.html
@@ -84,7 +84,7 @@
             <p class="texto">
                 Género: <strong>Drama rural</strong><br>
                 Duración: <strong>70 min</strong><br>
-                <strong>Basada en el libro de cocina de Leonardo Da Vinci</strong>
+                <strong>Inspirada en el libro de cocina de Leonardo Da Vinci</strong>
             </p>
             
 
