--- a/html/primitiva.html
+++ b/html/primitiva.html
@@ -37,7 +37,7 @@
     </div>
     <!-- Texto indicativo de la sección -->
     <div class="section-label">
-        <h1>PRIMITIVA,</h1>
+        <h1>PRIMITIVA.</h1>
         <h3>EL AÑO DE LA SEQUIA</h3>
         <h2>Films</h2>
 
@@ -98,7 +98,7 @@
             <p class="texto" id="col1">
                 Productoras<br>
                <strong>
-                IRUÉ CINE / LUMA d-block</strong><br>
+                IRUÉ CINE / LUMA DOC</strong><br>
                 <br>
                 Productoras <br>
                 <strong>
@@ -119,7 +119,7 @@
                 <br>
                 Dirección de fotografía y cámara<br>
                <strong>
-                ÁLVARO SAN millonario <br>
+                ÁLVARO SANMILLAN <br>
                 FEDERICO LUACE</strong><br>
                 
             </p>
@@ -140,7 +140,7 @@
                 <strong>
                 JUAN SILVA</strong><br>
                 <br>
-                Música<br>
+                Música y composición<br>
                 <strong>
                 CONRADO LESCANO</strong><br>
                 <br>
