--- a/html/trainJam.html
+++ b/html/trainJam.html
@@ -36,7 +36,7 @@
     </div>
     <!-- Texto indicativo de la sección -->
     <div class="section-label">
-        <h1>TRAIN JAM,<br>
+        <h1>TRAIN JAM.<br>
             ESCAPE DEL VIDEOJUEGO
         </h1>
         <h2>Series</h2>
