--- a/contacto.html
+++ b/contacto.html
@@ -31,7 +31,7 @@
                     </div>
                     <!-- Texto indicativo de la sección -->
                     <div class="section-label">
-                       <h2>Equipo</h2>
+                       <h2>Contacto</h2>
                     </div>
             </section>
 
