haciendo la seccion talleres

--- a/html/equipo.html
+++ b/html/equipo.html
@@ -110,7 +110,7 @@
                     </div>
                     <div class="caja-equipo">
                         <div class="subcaja1-equipo">
-                            <img src="../img/equipo/santiago.jpg" alt="">
+                            <img src="../img/equipo/paula.jpg" alt="">
                         </div>
                         <div class="subcaja2-equipo">
                             <h1 class="titulo">
