ultimos detalles y correcciones

--- a/html/equipo.html
+++ b/html/equipo.html
@@ -70,6 +70,7 @@
                                 Socia fundadora de Mujeres Audiovisuales y comprometida con la equidad de genero en la industria. 
                                 También es docente de diseño audiovisual en la FADU y en otras instituciones como Buenos Aires 
                                 Comunicación y la EICTV en Cuba. 
+                                <br>
 
                             </p>
         
@@ -87,22 +88,24 @@
         
                             </h1>
                             <p class="texto">
-                                Actor. Formado en Sportivo teatral con Ricardo Bartís, Raúl Serrano, Joy Morris y Alejandro Catalán. 
-                                Egresado primera camada de la diplomatura en Actuación audiovisual en Fundación SAGAI en 2023. 
-                                En teatro, 5 años de temporada y giras con “La ponedora, el ultimo milagro” de Ana Lucia Rodríguez en 
-                                Sportivo Teatral y “Crónicas extraordinarias” en el C.C. Recoleta. Trabajó bajo la dirección de Ricardo 
-                                Bartís, Raúl Serrano, Javier Daulte, Sebastián Borenztein, Diego Reinhold, Silvia Gómez Giusto, Sebastián 
-                                Irigo, Lorena Romain, entre otros. Actuó en diferentes obras de Microteatro BA desde hace 6 años, con 
-                                temporada en Microteatro MDQ, de las mas exitosas. Durante el 2020 portagonizó 4 series web 
-                                “Citas Online” (Fox tv), “Esas noches románticas”, “El gran influencer”, “Por siempre Marisol”, 
-                                “Crónicas extraordinarias” ésta última ganadora de festivales en España y Argentina. Sólo en 2022, 
-                                en tv participó en las series: “Los mufas” (G. Medina), “Magnicidios”, “Lara deconstruida”, “Rémoras”, 
-                                “Madame Requin” (A. Lecchi). En 2023 protagonizó la serie “Train Jam: Escape del Videojuego” para Amazon 
-                                Prime. Protagonizó los videoclips para la banda NAFTA, SIN BANDERA (Sony México) y ATAQUE 77. En cine, 
-                                coprotagonizó el film “El destino” (2021, CCEBA), participó en los films “Las hermanas fantásticas” para 
-                                Netflix, “Miénteme” de S. Schindler (2022), “Kóblic” de S. Borenztein con Ricardo Darín, “Días de vinilo” 
-                                de Gabriel Nesci y protagonizó “El ultimo viaje” de Oscar Carballo, film seleccionado en festivales 
-                                internacionales y seleccionada en el catálogo internacional “Marché du film 2020”
+                                Santiago Fraccarolli es productor y actor argentino con una destacada trayectoria producción audiovisual y teatro. 
+                                Su formación integral como diseñador de la UBA, y taller audiovisual de la UNA, le ha permitido desarrollar una sólida 
+                                visión del mundo escénico-estético y audiovisual. Formado en Sportivo Teatral con maestros como Ricardo Bartís y Raúl Serrano, 
+                                además se graduó en 2023 de la diplomatura en Actuación Audiovisual de la Fundación SAGAI, para la cual fue parte del equipo de 
+                                producción de los cortos que dirigieron Fernando Spiner, Marlene Grimberg y Javier Diment. <br>
+                                <br>
+                                En el ámbito audiovisual, también trabajó en SUDESTADA CINE en el área de producción y casting. 
+                                Fue parte del equipo de producción y elenco de “Efecto Lima” programa de humor para Canal de la Ciudad, en todas sus temporadas. 
+                                También para micros para MTV LATAM para la misma productora. <br>
+                                <br>
+                                Protagonizó y fue parte del equipo de producción del filme EL DESTINO para CCEBA, adaptándose a las nuevas plataformas. Además, 
+                                como socio fundador de ND SRL, produjo para la secretaría de cultura eventos y obras teatrales durante varias temporadas. 
+                                Como productor teatral, ha gestionado diversos proyectos audiovisuales, y obras teatrales que también protagonizó como 
+                                “La flor del Irupé”, “Amado, padre y esposo”, “La ponedora, el último milagro” y “Crónicas extraordinarias”, 
+                                y el festival SIN FIN de Ciencia ficción y fantasía en el C.C. Recoleta. En la actualidad se encuentra desarrollando proyectos 
+                                teatrales y audiovisuales, tanto de ficción como documentales. <br>
+                                <br>
+
                             </p>
                         </div>
 
