--- a/html/laVenadita.html
+++ b/html/laVenadita.html
@@ -135,6 +135,20 @@
     </div>
  
 </section>
+<section class="flex-container-trailer">
+
+    <div class="caja1-trailer-vacio">
+        <h3>PRÓXIMAMENTE TRAILER</h3>
+        <h2>LA VENADITA</h2>
+    </div>
+    <div class="caja2-trailer">
+        <img src="../img/individuales/laVenadita/LA VENADITA logo.png" alt="">
+
+    </div>
+
+
+
+</section>
 
   
                     
