--- a/html/talleres.html
+++ b/html/talleres.html
@@ -47,7 +47,7 @@
 
                 <div class="caja-talleres1">
                     <div class="subcaja1-talleres">
-                        <a href="../html/taller1.html" class="card-link">
+                        <a href="../html/taller1.html" >
                             <img src="../img/talleres/1.jpg" alt="">
                         </a>
                         
@@ -65,7 +65,7 @@
                 </div>
                 <div class="caja-talleres2">
                     <div class="subcaja3-talleres">
-                        <a href="../html/taller2.html" class="card-link">
+                        <a href="../html/taller2.html" >
                             <img src="../img/talleres/2.jpg" alt="">
                         </a>
                         
