--- a/html/trainJam.html
+++ b/html/trainJam.html
@@ -270,6 +270,27 @@
  
 </section>
 
+<section class="flex-container-trailer">
+
+    <div class="caja1-trailer">
+        <div style="padding:40.5%  0 0 0;position:relative;">
+            <iframe src="https://player.vimeo.com/video/1003239295?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
+                frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" 
+                style="position:absolute;top:0;left:0;width:100%;height:100%;" 
+                title="TRAIN JAM TRAILER SUB INGLES- 26.02.23- (1)">
+            </iframe>
+        </div> 
+
+    </div>
+    <div class="caja2-trailer">
+        <img src="../img/individuales/trainJam/TRAIN JAM logo negro.png" alt="">
+
+    </div>
+
+
+
+</section>
+
   
                     
     </main>
