--- a/html/circulo.html
+++ b/html/circulo.html
@@ -40,7 +40,9 @@
     </div>
     <!-- Texto indicativo de la sección -->
     <div class="section-label">
-        <h1>EL CÍRCULO</h1>
+        <h1>TUS AMIGOS <br>
+            DE SIEMPRE
+        </h1>
         <h2>Series</h2>
 
     </div>
@@ -69,7 +71,8 @@
         
         <div class="sub caja21">
             <h1 class="titulo">
-                EL CÍRCULO
+                TUS AMIGOS 
+                DE SIEMPRE
 
             </h1>
             <p class="texto">
