--- a/html/series.html
+++ b/html/series.html
@@ -86,7 +86,7 @@
                             <a href="../html/circulo.html" class="card-link">
                                 <img src="../img/series/elcirculo.jpg" class="card-img-top" alt="Película 1">
                                 <div class="card-info">
-                                    <h5 class="card-title">EL CIRCULO</h5>
+                                    <h5 class="card-title">TUS AMIGOS DE SIEMPRE</h5>
                                     
                                 </div>
                             </a>
