--- a/html/teatro.html
+++ b/html/teatro.html
@@ -100,7 +100,7 @@
                             <a href="../html/laGiocondaMecanica.html" class="card-link">
                                 <img src="../img/teatro/LA GIOCONDA poster CARTEL.jpg" class="card-img-top" alt="Película 1">
                                 <div class="card-info">
-                                    <h5 class="card-title">LA GIOCONDA MECÁNICA</h5>
+                                    <h5 class="card-title">AMOR Y TIRANÍA</h5>
                                     
                                 </div>
                             </a>
