--- a/html/laGiocondaMecanica.html
+++ b/html/laGiocondaMecanica.html
@@ -120,10 +120,10 @@
 <section class="flex-container-prensa">
 
    
-    <!-- <div class="caja2-prensa">
+     <div class="caja2-prensa">
         <img src="../img/individuales/laGiconda/trailer.jpg" alt="">
 
-    </div> -->
+    </div> 
 
 
 
